--- a/css/main.css
+++ b/css/main.css
@@ -188,9 +188,11 @@
 .advice__image-be-active,
 .advice__image-find-contact,
 .advice__image-work-it {
+  position: relative; 
+}
+
+.advice__text {
   position: relative;
-  -webkit-background-size: cover;
-  background-size: cover;  
 }
 
 .advice__number-wrapper {
@@ -274,19 +276,48 @@
   }
   
   .download-btn {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    position: relative;
+
+    width: 85vw;
+    height: 11vw;
+    border: none;
+    border-radius: 40px;
+    margin: 0 2vw;
+    padding: 0.9% 0;
+    min-height: 8%;
+    outline: none;
+    
+    margin-bottom: 15px;
+
+    background: #5e42b0;
+  }
+  
+  .download-btns__btn-icon-wrapper {
+    position: absolute;
+    right: 47vw;
+    top: 0;
+    bottom: 0;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .download-btns__btn-text-wrapper {
+    padding-left: 20vw;
+    margin-left: -60px;
   }
   
   .download-btns__text-fisrt-line {
+    display: block;
     margin-top: 5px;
 
-    font-size: 0.8rem;
+    font-size: 2.5vw;
   }
 
   .download-btns__text-second-line {
-    font-size: 0.8rem;
+    display: block;
+    font-size: 2.5vw;
   }
   
   .slogan__first-line,
@@ -314,6 +345,10 @@
   .athlets__stage {
     padding: 12% 17px 54px;
   }
+  
+  .athlets__stage:nth-child(3) {
+    padding: 15% 17px 36px;
+  }
 
   .players__title {
     padding: 3% 6%;
@@ -332,7 +367,11 @@
   }
 
   .players__stage {
-    padding: 12% 17px 18%;
+    padding: 10% 17px 10%;
+  }
+  
+  .players__stage:nth-child(3) {
+    padding: 10% 17px 18%;
   }
   
   .stage__title {
@@ -353,27 +392,11 @@
   .advice__image-be-active,
   .advice__image-find-contact,
   .advice__image-work-it { 
-    min-height: 110vw;
-  }
-  
-  
-  .advice__image-be-active {
-    background: #000 url("../img/beActive320.jpg");
-    background-size: cover;
-  }
-
-  .advice__image-find-contact {
-    background: #000 url("../img/findContact320.jpg");
-    background-size: cover;
-  }
-
-  .advice__image-work-it {
-    background: #000 url("../img/workIt320.jpg");
-    background-size: cover;
+    overflow: hidden;
   }
   
   .advice__number-wrapper {
-    bottom: -10px;
+    top: -35%;
     left: 20px;
 
     padding: 23px 26px;
@@ -386,9 +409,19 @@
   }
   
   .advice__text {
-    padding: 20px;
+    padding: 8vw 40px 30px 20px;
     margin-bottom: 55px;
-    padding-right: 40px;
+  }
+  
+  .advice:nth-child(3) .advice__text {
+    padding-bottom: 15px;
+  }
+  
+  .advice__image-find-contact picture,
+  .advice__image-work-it picture,
+  .advice__image-be-active picture {
+    display: flex;
+    justify-content: center;
   }
 
   .text__title { 
@@ -396,7 +429,7 @@
   }
   
   .text__content {
-    margin-top: 15px;
+    margin-top: 5px;
 
     font-size: 1.6rem;
     line-height: 1.3;
@@ -414,7 +447,7 @@
   }
   
   .logo-only-icon__icon {
-    padding: 10px;
+    padding: 15px 10px;
     width: 25%;
     border-radius: 13px;
   }
@@ -447,6 +480,7 @@
     background: url("../img/headerBg768.jpg");
     background-size: cover;
     padding-top: 2%;
+    padding-bottom: 12%;
   }
   
   .main-header__logo {
@@ -486,24 +520,31 @@
   .download-btn {
     position: relative;
 
-    width: 310px;
+    width: 40vw;
+    height: 10vw;
     border: none;
     border-radius: 40px;
-    margin: 0 20px 15px;
-    padding: 16px 0;
+    margin: 0 2vw;
+    padding: 0.9% 0;
+    min-height: 8%;
+    outline: none;
 
     background: #5e42b0;
   }
   
-  .download-btns__btn-text-wrapper {
-    left: 30px;
-    top: -5px;
-
-    width: 68%;
-  }
-
   .download-btns__btn-icon-wrapper {
-    right: -20px;
+    position: absolute;
+    left: 10%;
+    top: 0;
+    bottom: 0;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .download-btns__btn-text-wrapper {
+    padding-left: 13%
   }
 
   .download-btns__ios__icon {
@@ -515,13 +556,15 @@
   }
   
   .download-btns__text-fisrt-line {
+    display: block;
     margin-top: 0;
 
-    font-size: 1.1rem;
+    font-size: 1.8vw;
   }
 
   .download-btns__text-second-line {
-    font-size: 1.1rem;
+    display: block;
+    font-size: 1.9vw;
   }
   
   .athlets {
@@ -552,7 +595,7 @@
   }
   
   .athlets__stage {
-    padding: 24px 17px 54px 38%;
+    padding: 24px 17px 45px 38%;
   }
   
   .players {
@@ -582,9 +625,20 @@
     font-size: 6.3rem;
   }
   
-  .players__stage {
-    padding: 30px 45% 54px 17px;
-    padding-right: 45%;
+  .players__stage:nth-child(1) {
+    padding: 20px 45% 44px 3.5%;
+  }
+  
+  .players__stage:nth-child(2) {
+    padding: 57px 45% 65px 3.5%;
+  }
+  
+  .players__stage:nth-child(3) {
+    padding: 47px 45% 45px 3.5%;
+  }
+  
+  .player__hidden-text {
+    display: none;
   }
   
   .stage__title {
@@ -606,26 +660,11 @@
   .advice__image-find-contact,
   .advice__image-work-it { 
     min-height: 580px;
-  }
-  
-  
-  .advice__image-be-active {
-    background: #000 url("../img/beActive768.jpg");
-    background-size: cover;
-  }
-
-  .advice__image-find-contact {
-    background: #000 url("../img/findContact768.jpg");
-    background-size: cover;
-  }
-
-  .advice__image-work-it {
-    background: #000 url("../img/workIt768.jpg");
-    background-size: cover;
+    overflow: hidden;
   }
   
   .advice__number-wrapper {
-    bottom: -40px;
+    top: -30%;
     left: 30px;
 
     padding: 38px 45px;
@@ -639,17 +678,17 @@
   
   .advice__text {
     padding: 20px;
-    margin-bottom: 75px;
+    margin-bottom: 65px;
     padding-right: 40px;
   }
 
   .text__title { 
-    padding: 50px 7px;
-    font-size: 6.4rem;
+    padding: 40px 7px;
+    font-size: 11vw;
   }
   
   .text__content {
-    margin-top: -45px;
+    margin-top: -25px;
     margin-left: 10px;
 
     font-size: 2rem;
@@ -678,15 +717,15 @@
   }
 
   .download-text__first-line {
-    font-size: 6.7rem;
+    font-size: 11vw;
   }
 
   .download-text__second-line {
-    font-size: 2.8rem;
+    font-size: 4.8vw;
   }
 
   .main-footer__logo {
-    margin-top: 25px; 
+    margin-top: 40px; 
   }
 }
 
@@ -701,7 +740,7 @@
     position: relative;
     background-color: rgba(10, 14, 51, 0.85);
     padding-bottom: 6%;
-    padding-top: 2.5%;
+    padding-top: 2.35%;
   }
   
   .bg-desctop {
@@ -716,7 +755,7 @@
   }
   
   .main-header__logo {
-    margin-bottom: 15%;
+    margin-bottom: 14.5%;
   }
 
   .logo__icon {
@@ -726,17 +765,18 @@
   }
   
   .main-header__slogan {
-    margin-bottom: 10%;
+    margin-bottom: 11.3%;
   }
   
   .slogan__first-line,
   .slogan__second-line {
-    letter-spacing: 0.3vw;
+    
   }
   
   .slogan__first-line {
-    margin-left: 8%;
+    margin-left: 9%;
     font-size: 4.6vw;
+    letter-spacing: 0.27vw;
   }
   
   .slogan__second-line {
@@ -744,6 +784,7 @@
     margin-top: 0;
     margin-right: 8%;
     font-size: 4.5vw;
+    letter-spacing: 0.36vw;
   }
   
   .main-header__download-btns {
@@ -754,35 +795,41 @@
   .download-btn {
     position: relative;
 
-    width: 16%;
+    width: 32vh;
+    height: 8vh;
     border: none;
     border-radius: 40px;
-    margin: 0 20px;
+    margin: 0 1.6vw;
     padding: 0.9% 0;
     min-height: 8%;
+    outline: none;
 
     background: #5e42b0;
   }
    
   .download-btn:hover {
-    transform: scale(1.1);
+    box-shadow: 0 0 3px 3px white;
     cursor: pointer;
   }
 
   .download-btn:active {
-    transform: scale(1.2);
+    transform: translateY(3px);
     cursor: pointer;
   }
   
   .download-btns__btn-text-wrapper {
-    left: 8%;
-    top: -3px;
-
-    width: 68%;
+    padding-left: 13%;
   }
 
   .download-btns__btn-icon-wrapper {
-    right: -10%;
+    position: absolute;
+    left: 10%;
+    top: 0;
+    bottom: 0;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .download-btns__ios__icon {
@@ -794,19 +841,21 @@
   }
   
   .download-btns__text-fisrt-line {
+    display: block;
     margin-top: 0;
 
-    font-size: 0.68vw;
+    font-size: 1.3vh;
   }
 
   .download-btns__text-second-line {
-    font-size: 0.68vw;
+    display: block;
+    font-size: 1.5vh;
   }
   
   .athlets {
     position: relative;
     
-    padding-top: 5%;
+    padding-top: 4.5%;
     
     background: #fff;
   }
@@ -832,18 +881,18 @@
   }
   
   .athlets__stage {
-    padding: 2% 10% 3% 52.5%;
+    padding: 2.8% 10% 2.4% 52.5%;
   }
   
   .athlets__stage:nth-child(3) {
-    padding-top: 4%;
-    padding-bottom: 4%;
+    padding-top: 4.2%;
+    padding-bottom: 5%;
   }
   
   .players {
     position: relative;
     
-    padding-top: 53px;
+    padding-top: 4.5%;
     
     background: #fff;
     background-position: center left;
@@ -853,7 +902,7 @@
     position: absolute;
     top: 0;
     bottom: 15%;
-    right: 0;
+    right: 3%;
     
     content: "";
     width: 55%;
@@ -864,12 +913,17 @@
   }
   
   .players__title {
-    padding-left: 17%; 
-    font-size: 4.4vw;
+    padding-left: 16.5%; 
+    font-size: 4.2vw;
   }
   
   .players__stage {
-    padding: 3% 45% 4% 17%;
+    padding: 2.8% 50% 3.3% 17%;
+  }
+  
+  .players__stage:nth-child(3) {
+    padding-top: 4.6%;
+    padding-bottom: 5%;
   }
   
   .stage__title {
@@ -887,8 +941,9 @@
   }
   
   .stage__number {
-    font-size: 1.1vw;
-    bottom: 20%;
+    font-size: 0.95vw;
+    top: 18%; 
+    left: 1%;
   }
   
   .advice {
@@ -906,24 +961,16 @@
   }
   
   
-  .advice__image-be-active {
-    background: #000 url("../img/beActiveDesctop.jpg");
-    background-size: cover;
-  }
-
-  .advice__image-find-contact {
-    background: #000 url("../img/findContactDesctop.jpg");
-    background-size: cover;
-  }
-
-  .advice__image-work-it {
-    background: #000 url("../img/workItDesctop.jpg");
-    background-size: cover;
+  .advice__image-be-active img,
+  .advice__image-find-contact img,
+  .advice__image-work-it img {
+    width: 100%;
+    height: 100%;
   }
   
   .advice__number-wrapper {
     top: 27%;
-    right: -9%;
+    left: -9%;
 
     padding: 6.8% 7.5%;
 
@@ -934,33 +981,46 @@
     border-bottom-width: 5%;
   }
   
-  .advice:nth-child(2) .advice__number-wrapper {
-    right: auto;
-    left: -9%;
-  }
-  
-  .advice__text {
-    width: 50%;
-    padding: 8% 0 10% 5.5%;
-    margin-bottom: 3%;
+  .advice:nth-child(even) .advice__number-wrapper {
+    left: auto;
+    right: -9%;
   }
 
+  .advice__text {
+    width: 50%;
+    padding: 8.5% 0 0 6.5%;
+    margin-bottom: 0;
+  }
+
+  .advice:nth-child(even) .advice__text {
+    padding: 9% 0 0 9.5%;
+  }
+  
+  .advice:nth-child(even) .text__title {
+    padding: 8% 0 6.5%;
+  }
+  
   .text__title { 
-    padding: 8% 0 18%;
+    padding: 8% 0 10.5%;
     font-size: 4.2vw;
   }
   
   .text__content {
-    padding-right: 30%;
-    margin-top: -35px;
     margin-left: 10px;
-
     font-size: 1.35vw;
     line-height: 1.1;
   }
   
+  .advice:nth-child(even) .text__content {
+    padding-right: 40%;
+  }
+    
+  .advice:nth-child(odd) .text__content {
+    padding-right: 50%;
+  }
+  
   .main-footer {
-    padding: 12% 18px 2%;
+    padding: 11% 18px 2%;
     
     position: relative;
     background-color: rgba(10, 14, 51, 0.85);
@@ -973,39 +1033,41 @@
   }
   
   .main-footer__icon-wrapper {
+    position: relative;
     display: flex;
     justify-content: center;
   }
   
   .main-footer__logo-only-icon {
-    margin-bottom: 50px;
+    position: absolute;
+    top: 3%;
+    left: 25%;
   }
   
   .logo-only-icon__icon {
-    padding: 6% 5%;
-    width: 45%;
+    padding: 1vw 1vw;
+    width: 7.5vw;
     border-radius: 23%;
-    margin-left: -150px;
   }
   
   .main-footer__download-text {
-    margin-bottom: 80px;
+    margin-left: 8%;
+    margin-bottom: 8%;
   }
 
   .download-text__first-line {
-    margin-left: -110px;
-    font-size: 4.3rem;
-    letter-spacing: 1.7px;
+    font-size: 4.1vw;
+    letter-spacing: 0.3vw;
   }
 
   .download-text__second-line {
-    font-size: 1.6rem;
-    margin-left: -195px;
-    margin-top: -6px;
+    font-size: 1.55vw;
+    margin-top: -0.9vh;
+    text-align: left;
   }
 
   .main-footer__logo {
-    margin-top: 13%; 
+    margin-top: 14%; 
   }
 }
 
@@ -1098,14 +1160,20 @@
     background: #5e42b0;
   } 
   
-/*
-  .athlets::after {
-    background-size: 80%;
+  .logo-only-icon__icon {
+    padding: 1.8vh 1.8vh;
+    width: 14vh;
+    border-radius: 23%;
   }
   
-  .players::after {
-    background-size: 80%;
-    background-position: 0 25%;
+  .download-text__first-line {
+    font-size: 7.2vh;
+    letter-spacing: 0.3vw;
   }
-*/
+
+  .download-text__second-line {
+    font-size: 2.8vh;
+    margin-top: -0.9vh;
+    text-align: left;
+  }
 }
