--- a/css/main.css
+++ b/css/main.css
@@ -294,7 +294,8 @@
     border-radius: 20px;
     padding-left: 20%;
     padding-top: 0;
-    margin-left: 0;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .download-btns__btn-text-wrapper {
